@@ -85,7 +85,11 @@ def get_href(element, rel):
             # 'http://localhost:80/api/admin/enterprises'
             #
             # we are only interested in '/admin/enterprises/' part
-            return urlparse.urlparse(href).path[len(b('/api')):]
+            needle = '/api/'
+            url_path = urlparse.urlparse(href).path
+            index = url_path.find(needle)
+            result = url_path[index + len(needle) - 1:]
+            return result
 
 
 class AbiquoResponse(XmlResponse):
